Modify RepositoryTraitType